Updated html for CV download

--- a/index.html
+++ b/index.html
@@ -411,15 +411,15 @@
                                 </span>
                             </div>
                             <div class="contact-buttons">
-                                <a href="mailto:marjan.manasijevikj@example.com" class="button primary">
+                                <a href="mailto:marjan.manasijevik@yahoo.com" class="button primary">
                                     <i class="fas fa-envelope"></i> Send Email
                                 </a>
                                 <a href="https://www.linkedin.com/in/marjan-manasijevikj" target="_blank" class="button secondary">
                                     <i class="fab fa-linkedin"></i> LinkedIn Profile
                                 </a>
-                                <button class="button secondary">
+                                <a href="CV.pdf" class="button secondary" download>
                                     <i class="fas fa-download"></i> Download CV
-                                </button>
+                                </a>
                             </div>
                         </div>
                         <p class="languages">Fluent in English, Macedonian, Serbian | Conversant in French</p>
