Update index.html second time
to change the resume download button

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
                     <a href="#experience">Experience</a>
                     <a href="#skills">Skills</a>
                     <a href="#contact">Contact</a>
-                    <button class="resume-button">
+                    <a href="CV.pdf" class="resume-button" download>
                         <i class="fas fa-download"></i> Resume
-                    </button>
+                    </a>
                 </div>
                 <button class="mobile-menu-button">
                     <i class="fas fa-bars"></i>
@@ -475,4 +475,5 @@
         });
     </script>
 </body>
+
 </html>
