--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <meta property="og:title" content="Supply Chain Leader | APICS Certified Professional">
     <meta property="og:description" content="Central Planning Manager with proven track record of 24-37% cost reductions and 99.5% on-time delivery across 7 EMEA manufacturing plants.">
     <meta property="og:type" content="website">
-    <link rel="icon" type="image/png" href="/favicon.png">
+    <!--<link rel="icon" type="image/png" href="/favicon.png">-->
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -19,6 +20,9 @@
     <div class="app-container">
         <header>
             <nav>
+                <div class="hero-logo">
+                    <img src="apple-touch-icon.png" alt="Logo_pic">
+                </div>
                 <button class="nav-logo">Marjan Manasijevikj</button>
                 <div class="nav-links">
                     <a href="#about">About</a>
