--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta property="og:description" content="Central Planning Manager with proven track record of 24-37% cost reductions and 99.5% on-time delivery across 7 EMEA manufacturing plants.">
     <meta property="og:type" content="website">
     <!--<link rel="icon" type="image/png" href="/favicon.png">-->
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="icon" href="https://macecar.github.io/my-portfolio/favicon.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
